--- a/app/routes.yml
+++ b/app/routes.yml
@@ -60,14 +60,29 @@ parameters:
             route: '/superadmin'
             stack: ['superadmin.bouncer', 'admin.super.page']
 
+
+        ################################################################################################################
+        # SUPER ADMIN ROUTES
+        ################################################################################################################
+
+        admin.super.caches:
+            method: 'GET'
+            route: '/superadmin/caches'
+            stack: ['superadmin.bouncer', 'admin.caches.page']
+
         admin.super.users:
             method: 'GET'
             route: '/superadmin/users'
             stack: ['superadmin.bouncer', 'admin.users.page']
 
-        ########################################################################################################################
+        admin.super.message:
+            method: ['GET', 'POST']
+            route: '/superadmin/message'
+            stack: ['superadmin.bouncer', 'admin.message.page']
+
+        ################################################################################################################
         # HELP ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         help:
             method: 'GET'
@@ -89,9 +104,9 @@ parameters:
         #     route: '/help/api'
         #     stack: ['help.api.page']
 
-        ########################################################################################################################
+        ################################################################################################################
         # BUILD ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         build.history:
             method: 'GET'
@@ -117,9 +132,9 @@ parameters:
             stack: ['login.bouncer', 'build.start.handle.page']
             conditions: {id: '[0-9]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # PUSH ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         push:
             method: 'GET'
@@ -151,9 +166,9 @@ parameters:
             stack: ['login.bouncer', 'push.rollback.page']
             conditions: {id: '[A-Za-z0-9_-]+', server: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # SERVER ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         servers:
             method: 'GET'
@@ -197,9 +212,9 @@ parameters:
             stack: ['login.bouncer', 'admin.bouncer', 'server.admin.remove.handle']
             conditions: {id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # USER ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         user:
             method: 'GET'
@@ -223,9 +238,9 @@ parameters:
             stack: ['login.bouncer', 'user.preferences.handle']
             conditions: {id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # USER TOKEN MANAGEMENT ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         user.token.create.handle:
             method: 'POST'
@@ -248,9 +263,9 @@ parameters:
                 - id: '[\d]+'
                 - token: '[0-9a-zA-Z]{40,40}'
 
-        ########################################################################################################################
+        ################################################################################################################
         # REPOSITORY ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         repositories:
             method: 'GET'
@@ -300,9 +315,9 @@ parameters:
             stack: ['login.bouncer', 'admin.bouncer', 'repository.admin.remove.handle']
             conditions: {id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # REPOSITORY DEPLOYMENT ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         repository.deployments:
             method: 'GET'
@@ -322,9 +337,9 @@ parameters:
             stack: ['repoadmin.bouncer', 'repository.deployment.admin.remove.handle']
             conditions: {repository: '[\d]+', id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # GROUP ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         groups:
             method: 'GET'
@@ -368,9 +383,9 @@ parameters:
             stack: ['login.bouncer', 'admin.bouncer', 'group.admin.remove.handle']
             conditions: {id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # ENVIRONMENT ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         environments:
             method: 'GET'
@@ -425,9 +440,9 @@ parameters:
             stack: ['login.bouncer', 'admin.bouncer', 'environment.admin.edit.handle']
             conditions: {id: '[\d]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # GITHUB API ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         api.github.users:
             method: 'GET'
@@ -440,9 +455,9 @@ parameters:
             stack: ['login.bouncer', 'api.github.user.repositories']
             conditions: {username: '[A-Za-z0-9_-]+'}
 
-        ########################################################################################################################
+        ################################################################################################################
         # PUBLIC API ROUTES
-        ########################################################################################################################
+        ################################################################################################################
 
         api.index:
             method: 'GET'
