--- a/app/di.api.yml
+++ b/app/di.api.yml
@@ -215,14 +215,14 @@ services:
             - @repository.repo
             - @normalizer.repository
 
-    # @todo NORMALIZER MIGRATION
     api.repository.branches:
         class: 'QL\Hal\Controllers\Api\Repository\BranchesController'
         arguments:
-            - @api.helper
+            - @response.formatter
             - @url.helper
             - @github
             - @repository.repo
+            - @normalizer.repository
 
     # @todo NORMALIZER MIGRATION
     api.repository.pullrequests:
