Migrate queue refresh controller to new normalizer.

--- a/app/di.api.yml
+++ b/app/di.api.yml
@@ -36,13 +36,12 @@ services:
             - @push.repo
             - @clock
 
-    # @todo NORMALIZER MIGRATION
     api.queue.refresh:
         class: 'QL\Hal\Controllers\Api\QueueRefreshController'
         arguments:
-            - @api.helper
-            - @api.build.normalizer
-            - @api.push.normalizer
+            - @response.formatter
+            - @normalizer.build
+            - @normalizer.push
             - @build.repo
             - @push.repo
 
