Switch api caching middleware over to new response handler.

--- a/app/di.yml
+++ b/app/di.yml
@@ -250,7 +250,8 @@ services:
 
     cachedApi.middleware:
         class: 'QL\Hal\Middleware\CachedApiMiddleware'
-        arguments: [@api.helper]
+        arguments:
+            - @response.formatter
 
     ######################################################################################################################
     # NON-DATABASE SERVICES
