--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,9 +35,7 @@
     </listeners>
 
     <logging>
-        <!--
-        <log type="coverage-html" target=".phpunit/php-code-coverage" charset="UTF-8" highlight="true" lowUpperBound="98" highLowerBound="99" />
-        -->
+        <log type="coverage-html" target="phpunit/php-code-coverage" charset="UTF-8" highlight="true" lowUpperBound="98" highLowerBound="99" />
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
     </logging>
 
