--- a/app/di.yml
+++ b/app/di.yml
@@ -203,7 +203,7 @@ services:
 
     # Bounce unauthenticated users
     login.bouncer:
-        class: 'QL\Hal\Bouncers\LoginBouncer'
+        class: 'QL\Hal\Middleware\Bouncer\LoginBouncer'
         arguments:
             - @session
             - @user.repo
@@ -212,7 +212,7 @@ services:
 
     # Bounce non-admins
     admin.bouncer:
-        class: 'QL\Hal\Bouncers\AdminBouncer'
+        class: 'QL\Hal\Middleware\Bouncer\AdminBouncer'
         arguments:
             - @service_container
             - @permissions
@@ -221,7 +221,7 @@ services:
 
     # Bounce non-super-admins
     superadmin.bouncer:
-        class: 'QL\Hal\Bouncers\SuperAdminBouncer'
+        class: 'QL\Hal\Middleware\Bouncer\SuperAdminBouncer'
         arguments:
             - @service_container
             - @permissions
@@ -230,7 +230,7 @@ services:
 
     # Bounce users who don't have access to modify a repository
     repoadmin.bouncer:
-        class: 'QL\Hal\Bouncers\RepoAdminBouncer'
+        class: 'QL\Hal\Middleware\Bouncer\RepoAdminBouncer'
         arguments:
             - @service_container
             - @permissions
@@ -242,7 +242,7 @@ services:
 
     # Bounce unauthenticated api clients
     api.auth.bouncer:
-        class: 'QL\Hal\Bouncers\ApiAuthBouncer'
+        class: 'QL\Hal\Middleware\Bouncer\ApiAuthBouncer'
         arguments:
             - @service_container
             - @ldapService
