--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     },
     "repositories": [
         {
+            "type": "vcs",
+            "url": "git@git:web-core/hal-core.git"
+        },
+        {
             "type": "composer",
             "url": "http://composer/"
         }
@@ -26,11 +30,11 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
-        "ql/hal-core": "2.4.*",
+        "ql/hal-core": "dev-master",
         "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.2",
         "ql/mcp-core": "1.*",
-        "ql/mcp-corp-account": "~0.2@rc",
+        "ql/mcp-corp-account": "0.2.1",
         "ql/mcp-crypto": "~1.2",
         "ql/mcp-logger": "1.3.*",
         "ql/panthor": "~1.1",
